--- a/client/src/components/RoomBooking.css
+++ b/client/src/components/RoomBooking.css
@@ -19,6 +19,12 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.room-selection li small {
+  display: block;
+  font-size: 12px;
+  /* color: #666; */
+}
+
 .room-booking-container h2 {
   text-align: center;
   margin-bottom: 20px;
@@ -29,7 +35,7 @@
 }
 
 .search-container input[type="text"] {
-  width: calc(100% - 24px); /* Adjusted width */
+  width: calc(100% - 24px);
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 5px;
